--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,12 @@
 	"description": "The Laravel Framework.",
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
+	"type": "project",
 	"require": {
-		"laravel/framework": "4.1.*",
-		"intervention/image": "dev-master"
+		"laravel/framework": "4.2.*"
 	},
 	"require-dev": {
-    	"way/generators": "dev-master"
+		"way/generators": "~2.0"
 	},
 	"autoload": {
 		"classmap": [
@@ -17,17 +17,17 @@
 			"app/models",
 			"app/database/migrations",
 			"app/database/seeds",
-			"app/tests/TestCase.php"
+			"app/tests/TestCase.php",
+			"app/repository"
 		],
 		
 		"psr-0": {
-			"Repository": "app/"
+			"repository": "app/"
 		},
-		
 		"files": [
-			"app/helpers.php"
+			"app/globals.php",
+			"app/http_constants.php"
 		]
-		
 	},
 	"scripts": {
 		"post-install-cmd": [
